<resources>
    <string name="app_name">WhatsAppClone</string>

    <!-- Change the following strings as required -->
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">uskTFXf9dQh9lyZJ0SZR9UZRZ7AnSItnAyGHMdBt</string>
    <string name="back4app_client_key">E8JSCZFEPhCoUI32X4KRqmAlKIfFWcE9h4RPiQ7X</string>


    <string name="enter_email">Please enter email...</string>
    <string name="enter_username">Please enter username...</string>
    <string name="enter_password">Please enter password...</string>
    <!-- Sign Up Activity -->
    <string name="app_logo_description">What\'s App</string>
    <string name="app_title">Whats App</string>
    <string name="btn_signup">Sign Up</string>
    <string name="login_label">Already have an Account?</string>
    <string name="text_login">Log in.</string>

    <!-- Log In Activity -->
    <string name="btn_login">Log in</string>
    <string name="signup_label">New to WhatsApp?</string>
    <string name="text_signup">Sign up.</string>

    <!-- Social Media Activity -->
    <string name="logout_user_item">logout</string>

    <!-- Chat Box Activity -->
    <string name="send_message">Type a message...</string>
</resources>